--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,3 +3,9 @@
     <span>{{ videogame.title }}</span>
   </li>
 </ul>
+
+<ul>
+  <li *ngFor="let platform of platforms">
+    <span>{{ platform.name }}</span>
+  </li>
+</ul>
